# RemoteChangeDetection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PyFiles/: test_infer.py
src/: UNetTrt.cpp  UNetTrt.h  trt_logger.cpp  trt_logger.h
